--- a/requirements.txt
+++ b/requirements.txt
@@ -215,6 +215,7 @@ types-six==0.1.7
 types-toml==0.1.3
 typing-extensions==3.10.0.0
 urllib3==1.26.6
+vista_pegasus_wrapper
 vistautils==0.24.0
 wandb==0.11.0
 wasabi==0.8.2
