--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,8 @@ max-line-length = 300
 disable = """
 R,fixme,no-member,unsupported-membership-test,unsubscriptable-object
 unsupported-assignment-operation,not-an-iterable,too-many-lines,wrong-import-order,
-missing-module-docstring,missing-class-docstring,missing-function-docstring
+missing-module-docstring,missing-class-docstring,missing-function-docstring, protected-access,
+dangerous-default-value
 """
 
 [tool.pylint.reports]
