--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -33,7 +33,7 @@ defusedxml==0.7.1
 deprecation==2.1.0
 dill==0.3.4
 docker-pycreds==0.4.0
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0-py3-none-any.whl
+en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.1.0/en_core_web_md-3.1.0-py3-none-any.whl
 entrypoints==0.3
 feedparser==6.0.8
 filelock==3.0.12
