Add required package, reformat

--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -121,6 +121,7 @@ pyasn1-modules==0.2.8
 pycparser==2.20
 pydantic==1.8.2
 Pygments==2.10.0
+pyinflect==0.5.1
 pyparsing==2.4.7
 pyrsistent==0.18.0
 pytest==6.2.5
